Closed Bug 529356 Opened 16 years ago Closed 16 years ago

Fix un-handled switch cases in nsStyleAnimation's "StyleCoordToValue" helper function

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

(Whiteboard: [build_warning])

Attachments

(1 file)

Currently I get this build warning when building mozilla-central: > ../../../mozilla/layout/style/nsStyleAnimation.cpp:950: warning: enumeration value ‘eStyleUnit_Degree’ not handled in switch > ../../../mozilla/layout/style/nsStyleAnimation.cpp:950: warning: enumeration value ‘eStyleUnit_Grad’ not handled in switch > ../../../mozilla/layout/style/nsStyleAnimation.cpp:950: warning: enumeration value ‘eStyleUnit_Radian’ not handled in switch I think we just need to add a "default" case to that function, which should return PR_FALSE (indicating that we failed to convert the degree/grad/radian-unitted nsStyleCoord into a nsStyleAnimation::Value)
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Attachment #412917 - Flags: review?(dbaron)
Blocks: 522852
Comment on attachment 412917 [details] [diff] [review] fix: add 'default' case in StyleCoordToValue r=dbaron
Attachment #412917 - Flags: review?(dbaron) → review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Whiteboard: [build_warning]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: