Bug 529356: Add 'default' case in a switch statement in nsStyleAnimation, to fix build warning. r=dbaron