layout/style/nsStyleAnimation.cpp
@@ -948,8 +948,6 @@ static PRBool
 StyleCoordToValue(const nsStyleCoord& aCoord, nsStyleAnimation::Value& aValue)
 {
   switch (aCoord.GetUnit()) {
-    case eStyleUnit_Null:
-      return PR_FALSE;
     case eStyleUnit_Normal:
       aValue.SetNormalValue();
       break;
@@ -976,6 +974,8 @@ StyleCoordToValue(const nsStyleCoord& aCoord, nsStyleAnimation::Value& aValue)
       aValue.SetIntValue(aCoord.GetIntValue(),
                          nsStyleAnimation::eUnit_Integer);
       break;
+    default:
+      return PR_FALSE;
   }
   return PR_TRUE;
 }
